# ProjectFLow

./: .gitignore  README.md  install.ps1  install.sh  project-flow.yml  pyproject.toml  render.yaml  test-kilo.yml
backend/: main.py  requirements.txt
config/agents/: architect.md  ask.md  code-reviewer.md  code-simplifier.md  code-skeptic.md  code.md  debug.md  docs-specialist.md  frontend-specialist.md  orchestrator.md  test-engineer.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/app/: routes.tsx
frontend/src/styles/: fonts.css  index.css  theme.css
src/project_flow/: __init__.py  ai_brain.py  cli.py  config.py  constants.py  context.py  models.py  scaffolder.py  scanner.py  tech_stack.py  utils.py  writer.py
src/project_flow/data/: ai-config.json  comprehensive-rules.md  detection-patterns.json  ide-paths.json  language-globs.json  models-registry.json  rule-sources.md  rules_prompt.md  skill-sources.md  skills_prompt.md
src/project_flow/generators/: antigravity.py  claude.py  cline.py  cursor.py  kilo.py  registry.py  void_gen.py  vscode.py  windsurf.py  zed.py
src/project_flow/renderers/: agents.py  rules.py  skills.py
src/project_flow/templates/: adr.md.j2  agent.md.j2  api.md.j2  architecture.md.j2  conventions.md.j2  data-model.md.j2  dev-checklist.json.j2  dev-checklist.md.j2  dev-setup.md.j2  env-vars.md.j2  prd.md.j2  (+13 more)
tests/: conftest.py  integration_proxy.py  test_ai_brain.py  test_config.py  test_e2e.py  test_proxy.py  test_renderers.py  test_scanner.py  test_tech_stack.py  test_web_server.py  test_writer.py
(+35 files in other folders)
