[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-flow"
version = "0.1.0"
description = "CLI tool to make project folders AI-ready for VS Code, Cursor, Kilo, and more."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "Jinja2>=3.1",
    "python-frontmatter>=1.1",
    "requests>=2.31",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
project-flow = "project_flow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
project_flow = [
    "web/static/**/*",
    "data/**/*",
    "templates/**/*",
]
